--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "semantic-ui-rtl": "^2.4.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
